force-app/main/default/objects/MD_Appraisal_Form__c/MD_Appraisal_Form__c.object-meta.xml
<CustomObject>
    <label>MD Appraisal Form</label>
    <nameField>
        <label>MD Appraisal Form Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MD Appraisal Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>