force-app/main/default/objects/MD_Appraisal_Form__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A text description of the appraisal form.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>