force-app/main/default/objects/MD_Appraisal_Form__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date for this appraisal form.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>