force-app/main/default/objects/MD_Appraisal_Form__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <formula>IF(NOT(ISBLANK(Start_Date__c)) &amp;&amp; NOT(ISBLANK(End_Date__c)) , 
  Start_Date__c &lt; TODAY() &amp;&amp; End_Date__c >= TODAY()
, IF(NOT(ISBLANK(Start_Date__c)), Start_Date__c &lt; TODAY()
  , IF(NOT(ISBLANK(End_Date__c)), End_Date__c >= TODAY(), true)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>