force-app/main/default/objects/MD_Appraisal_Form__c/fields/MD_Appraisal_Form_External_ID__c.field-meta.xml
<CustomField>
    <fullName>MD_Appraisal_Form_External_ID__c</fullName>
    <description>Appraisal Form Number</description>
    <externalId>true</externalId>
    <label>MD Appraisal Form External ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>