force-app/main/default/objects/MD_Appraisal_Form__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date for this appraisal form.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>