force-app/main/default/objects/MD_Appraisal_Form__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Version of appraisal form</description>
    <label>Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>